--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Veretenni Stock Predictor: Бесплатный AI-прогноз цен акций MOEX для SBER/GAZP</title>
+    <title>RussianStocks AI: Бесплатный AI-прогноз цен акций MOEX для SBER/GAZP</title>
     <meta name="description" content="Точные AI-прогнозы цен акций на MOEX с Transformer. Бесплатно для SBER/GAZP на 1 день. Премиум 500 руб/мес: уведомления, все тикеры. Соответствует ФЗ-39, ФЗ-152.">
     <meta name="keywords" content="прогноз акций MOEX бесплатно, AI-прогноз SBER GAZP 2025, нейросеть трейдинг бесплатно, прогноз цен акций Transformer">
-    <meta property="og:title" content="Veretenni Stock Predictor: AI-прогноз цен акций MOEX | Бесплатно для SBER/GAZP">
+    <meta property="og:title" content="RussianStocks AI: AI-прогноз цен акций MOEX | Бесплатно для SBER/GAZP">
     <meta property="og:description" content="AI-прогнозы акций MOEX: нейросеть для трейдеров. Бесплатно SBER/GAZP. Премиум с уведомлениями. Не инвестиционный совет (ФЗ-39).">
-    <meta property="og:url" content="https://veretenni-stock-predictor.streamlit.app/">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/001F3F/FFFFFF?text=Veretenni+Stock+Predictor" loading="lazy">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Veretenni Stock Predictor","description":"AI-инструмент для прогноза цен акций MOEX","url":"https://veretenni-stock-predictor.streamlit.app/","publisher":{"@type":"Organization","name":"Veretenni Stock Predictor","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"offers":{"@type":"Offer","price":"500","priceCurrency":"RUB","itemOffered":"Премиум подписку"}}</script>
-    <link rel="canonical" href="https://veretenni-stock-predictor.streamlit.app/">
-    <link rel="alternate" hreflang="ru" href="https://veretenni-stock-predictor.streamlit.app/">
+    <meta property="og:url" content="https://russianstocks-ai.streamlit.app/">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630/001F3F/FFFFFF?text=RussianStocks+AI" loading="lazy">
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"RussianStocks AI","description":"AI-инструмент для прогноза цен акций MOEX","url":"https://russianstocks-ai.streamlit.app/","publisher":{"@type":"Organization","name":"RussianStocks AI","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"offers":{"@type":"Offer","price":"500","priceCurrency":"RUB","itemOffered":"Премиум подписку"}}</script>
+    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/">
+    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg" aria-label="Основная навигация">
         <div class="container">
-            <a class="navbar-brand" href="#">Veretenni Stock Predictor</a>
+            <a class="navbar-brand" href="#">RussianStocks AI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
@@ -40,7 +40,7 @@
             <h1>AI-прогноз цен акций MOEX бесплатно</h1>
             <p class="lead">Точные прогнозы с Transformer на основе EMA, MACD, RSI. Бесплатно для SBER/GAZP на 1 день. Премиум 500 руб/мес: все тикеры, уведомления, аналитика. Не инвестиционный совет (ФЗ-39). Ограниченный доступ — начните сейчас!</p>
             <div class="cta-wrapper">
-                <a href="https://veretenni-stock-predictor.streamlit.app/" class="cta">Получить прогноз бесплатно</a>
+                <a href="https://russianstocks-ai.streamlit.app/" class="cta">Получить прогноз бесплатно</a>
             </div>
             <div class="mt-3"><span class="badge bg-light text-dark">Соответствует ФЗ-39, ФЗ-152</span></div>
         </div>
@@ -81,8 +81,8 @@
         <div class="container">
             <h2 class="text-center mb-4">Ценообразование: Прогноз акций MOEX</h2>
             <div class="row g-4 justify-content-center">
-                <div class="col-lg-5"><div class="pricing-card"><i class="bi bi-unlock" alt="Иконка бесплатного плана"></i><h3>Бесплатный</h3><div class="price">0 ₽</div><ul><li>SBER/GAZP на 1 день</li><li>Базовые индикаторы</li></ul><a href="https://veretenni-stock-predictor.streamlit.app/" class="cta">Начать</a></div></div>
-                <div class="col-lg-5"><div class="pricing-card popular"><i class="bi bi-crown" alt="Иконка премиум-плана"></i><h3>Премиум</h3><div class="price">500 ₽</div><ul><li>Все тикеры MOEX</li><li>30 дней прогнозы</li><li>Уведомления</li><li>Аналитика</li></ul><a href="https://veretenni-stock-predictor.streamlit.app/" class="cta">Активировать</a></div></div>
+                <div class="col-lg-5"><div class="pricing-card"><i class="bi bi-unlock" alt="Иконка бесплатного плана"></i><h3>Бесплатный</h3><div class="price">0 ₽</div><ul><li>SBER/GAZP на 1 день</li><li>Базовые индикаторы</li></ul><a href="https://russianstocks-ai.streamlit.app/" class="cta">Начать</a></div></div>
+                <div class="col-lg-5"><div class="pricing-card popular"><i class="bi bi-crown" alt="Иконка премиум-плана"></i><h3>Премиум</h3><div class="price">500 ₽</div><ul><li>Все тикеры MOEX</li><li>30 дней прогнозы</li><li>Уведомления</li><li>Аналитика</li></ul><a href="https://russianstocks-ai.streamlit.app/" class="cta">Активировать</a></div></div>
             </div>
         </div>
     </section>
@@ -97,15 +97,15 @@
                 </div>
                 <div class="col-12 col-md-2 footer-column">
                     <h5>Документы</h5>
-                    <a href="/disclaimer.html" target="_blank" rel="noopener">Дисклеймер</a><br>
-                    <a href="/privacy.html" target="_blank" rel="noopener">Конфиденциальность</a><br>
-                    <a href="/oferta.html" target="_blank" rel="noopener">Оферта</a><br>
-                    <a href="/terms.html" target="_blank" rel="noopener">Условия</a>
+                    <a href="disclaimer.html" target="_blank" rel="noopener">Дисклеймер</a><br>
+                    <a href="privacy.html" target="_blank" rel="noopener">Конфиденциальность</a><br>
+                    <a href="oferta.html" target="_blank" rel="noopener">Оферта</a><br>
+                    <a href="terms.html" target="_blank" rel="noopener">Условия</a>
                 </div>
                 <div class="col-12 col-md-2 footer-column">
                     <h5>О сервисе</h5>
                     <a href="#testimonials">Отзывы</a><br>
-                    <a href="/disclaimer.html" rel="noopener">Юридическая информация</a>
+                    <a href="disclaimer.html" rel="noopener">Юридическая информация</a>
                 </div>
                 <div class="col-12 col-md-3 footer-column social-icons">
                     <h5>Для связи</h5>
@@ -114,11 +114,11 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Veretenni Stock Predictor. Все права защищены. Не инвестиционный совет.</p>
+                <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет.</p>
             </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script>document.addEventListener('DOMContentLoaded',()=>{window.addEventListener('scroll',()=>{document.querySelector('.navbar').classList.toggle('scrolled',window.scrollY>50);});document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener('click',e=>{e.preventDefault();const t=document.querySelector(a.getAttribute('href'));if(t)window.scrollTo({top:t.offsetTop-80,behavior:'smooth'});});});if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="/privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
+    <script>document.addEventListener('DOMContentLoaded',()=>{window.addEventListener('scroll',()=>{document.querySelector('.navbar').classList.toggle('scrolled',window.scrollY>50);});document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener('click',e=>{e.preventDefault();const t=document.querySelector(a.getAttribute('href'));if(t)window.scrollTo({top:t.offsetTop-80,behavior:'smooth'});});});if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
 </body>
 </html>
