--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Дисклеймер | Veretenni Stock Predictor</title>
+    <title>Дисклеймер | RussianStocks AI</title>
     <meta name="description" content="Дисклеймер для сервиса прогнозов цен акций MOEX. Не инвестиционные советы. Соответствует ФЗ-39.">
     <meta name="keywords" content="дисклеймер прогноз акций MOEX, отказ от ответственности ФЗ-39, юридическая информация AI-прогноз SBER">
     <meta name="author" content="Веретенников Денис Андреевич">
-    <link rel="canonical" href="https://veretenni-stock-predictor.streamlit.app/disclaimer.html">
-    <link rel="alternate" hreflang="ru" href="https://veretenni-stock-predictor.streamlit.app/disclaimer.html">
+    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/disclaimer.html">
+    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/disclaimer.html">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Дисклеймер | Veretenni Stock Predictor">
+    <meta property="og:title" content="Дисклеймер | RussianStocks AI">
     <meta property="og:description" content="Отказ от ответственности за прогнозы цен акций.">
     <meta property="og:image" content="https://via.placeholder.com/1200x630/001F3F/FFFFFF?text=Disclaimer" loading="lazy">
-    <meta property="og:url" content="https://veretenni-stock-predictor.streamlit.app/disclaimer.html">
+    <meta property="og:url" content="https://russianstocks-ai.streamlit.app/disclaimer.html">
     <meta property="og:type" content="article">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Article","headline":"Дисклеймер Veretenni Stock Predictor","description":"Отказ от ответственности за прогнозы цен акций MOEX.","author":{"@type":"Person","name":"Веретенников Денис Андреевич"},"publisher":{"@type":"Organization","name":"Veretenni Stock Predictor","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"datePublished":"2025-10-18","url":"https://veretenni-stock-predictor.streamlit.app/disclaimer.html"}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Article","headline":"Дисклеймер RussianStocks AI","description":"Отказ от ответственности за прогнозы цен акций MOEX.","author":{"@type":"Person","name":"Веретенников Денис Андреевич"},"publisher":{"@type":"Organization","name":"RussianStocks AI","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"datePublished":"2025-10-18","url":"https://russianstocks-ai.streamlit.app/disclaimer.html"}</script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -26,12 +26,12 @@
 <body>
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
-            <a class="navbar-brand" href="/">Veretenni Stock Predictor</a>
+            <a class="navbar-brand" href="index.html">RussianStocks AI</a>
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/privacy.html" rel="noopener">Конфиденциальность</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/oferta.html" rel="noopener">Оферта</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/terms.html" rel="noopener">Условия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
+                    <li class="nav-item"><a class="nav-link" href="oferta.html" rel="noopener">Оферта</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
                 </ul>
             </div>
         </div>
@@ -70,9 +70,9 @@
         </div>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 Veretenni Stock Predictor. Все права защищены. Не инвестиционный совет.</p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="/privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
+    <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
 </body>
 </html>
