--- a/oferta.html
+++ b/oferta.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Публичная оферта | Veretenni Stock Predictor</title>
-    <meta name="description" content="Публичная оферта для использования сервиса Veretenni Stock Predictor по ФЗ-2300-1, ФЗ-54. Не инвестиционный совет.">
+    <title>Публичная оферта | RussianStocks AI</title>
+    <meta name="description" content="Публичная оферта для использования сервиса RussianStocks AI по ФЗ-2300-1, ФЗ-54. Не инвестиционный совет.">
     <meta name="keywords" content="публичная оферта AI-прогноз акций, условия подписки MOEX ФЗ-2300-1, оферта премиум SBER GAZP">
-    <link rel="canonical" href="https://veretenni-stock-predictor.streamlit.app/oferta.html">
-    <link rel="alternate" hreflang="ru" href="https://veretenni-stock-predictor.streamlit.app/oferta.html">
+    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/oferta.html">
+    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/oferta.html">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
@@ -18,12 +18,12 @@
 <body>
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
-            <a class="navbar-brand" href="/">Veretenni Stock Predictor</a>
+            <a class="navbar-brand" href="index.html">RussianStocks AI</a>
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/disclaimer.html" rel="noopener">Дисклеймер</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/privacy.html" rel="noopener">Конфиденциальность</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/terms.html" rel="noopener">Условия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener">Дисклеймер</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
                 </ul>
             </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Предмет Оферты</h5>
-                <p class="card-text">Исполнитель предоставляет Пользователю (Акцептанту) доступ к сервису Veretenni Stock Predictor для получения прогнозов цен акций (образовательный/информационный характер).</p>
+                <p class="card-text">Исполнитель предоставляет Пользователю (Акцептанту) доступ к сервису RussianStocks AI для получения прогнозов цен акций (образовательный/информационный характер).</p>
             </div>
         </div>
         <div class="card mb-4">
@@ -92,9 +92,9 @@
         </div>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 Veretenni Stock Predictor. Все права защищены. Не инвестиционный совет.</p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="/privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
+    <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
 </body>
 </html>
