--- a/oferta.html
+++ b/oferta.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Публичная оферта | RussianStocks AI</title>
-    <meta name="description" content="Публичная оферта для использования сервиса RussianStocks AI по ФЗ-2300-1, ФЗ-54. Не инвестиционный совет.">
-    <meta name="keywords" content="публичная оферта AI-прогноз акций, условия подписки MOEX ФЗ-2300-1, оферта премиум SBER GAZP">
-    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/oferta.html">
-    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/oferta.html">
+    <title>Публичная оферта | RussianStocks AI: Премиум подписка трейдинг</title>
+    <meta name="description" content="Публичная оферта для использования сервиса RussianStocks AI по ФЗ-2300-1, ФЗ-54. Не инвестиционный совет. Условия подписки на AI-прогноз акций MOEX.">
+    <meta name="keywords" content="публичная оферта AI-прогноз акций, условия подписки MOEX ФЗ-2300-1, оферта премиум SBER GAZP, Transformer модель трейдинг, бесплатный AI трейдер">
+    <link rel="canonical" href="https://amato2114.github.io/RussianStocks/oferta.html">
+    <link rel="alternate" hreflang="ru" href="https://amato2114.github.io/RussianStocks/oferta.html">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
@@ -19,11 +19,13 @@
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
             <a class="navbar-brand" href="index.html">RussianStocks AI</a>
-            <div class="collapse navbar-collapse justify-content-end">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener">Дисклеймер</a></li>
                     <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                 </ul>
             </div>
         </div>
@@ -39,25 +41,25 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Предмет Оферты</h5>
-                <p class="card-text">Исполнитель предоставляет Пользователю (Акцептанту) доступ к сервису RussianStocks AI для получения прогнозов цен акций (образовательный/информационный характер).</p>
+                <p class="card-text">Исполнитель предоставляет Пользователю (Акцептанту) доступ к сервису RussianStocks AI для получения прогнозов цен акций (образовательный/информационный характер с использованием Transformer).</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Акцепт Оферты</h5>
-                <p class="card-text">Полный и безусловный акцепт — использование сервиса, регистрация email или оплата. Акцепт подтверждает согласие со всеми условиями.</p>
+                <p class="card-text">Полный и безусловный акцепт — использование сервиса, регистрация email или оплата. Акцепт подтверждает согласие со всеми условиями, включая дисклеймер по ФЗ-39.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Услуги</h5>
-                <p class="card-text">- Бесплатно: Прогнозы для SBER и GAZP на 1 день.<br>- Премиум: Доступ ко всем тикерам (200+), прогнозам на 30 дней, уведомлениям — 500 руб./30 дней (автопродление, отмена в любой момент).</p>
+                <p class="card-text">- Бесплатно: Прогнозы для SBER и GAZP на 1 день с базовыми индикаторами.<br>- Премиум: Доступ ко всем тикерам (200+), прогнозам на 30 дней, уведомлениям — 500 руб./30 дней (автопродление, отмена в любой момент). Аналитика на основе EMA, MACD, RSI.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Оплата</h5>
-                <p class="card-text">Через YooKassa. Чеки генерируются автоматически и отправляются на email (ФЗ-54). Оплата подтверждает акцепт.</p>
+                <p class="card-text">Через YooKassa. Чеки генерируются автоматически и отправляются на email (ФЗ-54). Оплата подтверждает акцепт для премиум AI-трейдинг.</p>
             </div>
         </div>
         <div class="card mb-4">
@@ -69,13 +71,13 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Права и обязанности</h5>
-                <p class="card-text">- Исполнитель: Обеспечивает доступ, точность данных от MOEX.<br>- Пользователь: Не использовать для незаконных целей, не перепродавать.</p>
+                <p class="card-text">- Исполнитель: Обеспечивает доступ, точность данных от MOEX API.<br>- Пользователь: Не использовать для незаконных целей, не перепродавать прогнозы Transformer.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Ответственность</h5>
-                <p class="card-text">Исполнитель не несет ответственности за убытки от использования прогнозов (ФЗ-39).</p>
+                <p class="card-text">Исполнитель не несет ответственности за убытки от использования прогнозов (ФЗ-39). Сервис — для образовательных целей, как Forex AI прогноз.</p>
             </div>
         </div>
         <div class="card mb-4">
@@ -90,9 +92,10 @@
                 <p class="card-text">Бессрочно, до отзыва Оферты.</p>
             </div>
         </div>
+        <a href="index.html" class="btn btn-primary">Вернуться к ценообразованию</a>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет.</p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. <a href="index.html" style="color:#FFD700;">Главная</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
