--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Политика конфиденциальности | RussianStocks AI</title>
-    <meta name="description" content="Политика обработки персональных данных в RussianStocks AI по ФЗ-152. Минимальный сбор данных.">
-    <meta name="keywords" content="политика конфиденциальности AI-прогноз акций, ФЗ-152 обработка данных MOEX, privacy премиум подписка SBER">
-    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/privacy.html">
-    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/privacy.html">
+    <title>Политика конфиденциальности | RussianStocks AI: AI-трейдинг Россия</title>
+    <meta name="description" content="Политика обработки персональных данных в RussianStocks AI по ФЗ-152. Минимальный сбор данных для премиум AI-прогноз акций MOEX.">
+    <meta name="keywords" content="политика конфиденциальности AI-прогноз акций, ФЗ-152 обработка данных MOEX, privacy премиум подписка SBER, нейросеть трейдинг бесплатно, прогноз акций Сбер">
+    <link rel="canonical" href="https://amato2114.github.io/RussianStocks/privacy.html">
+    <link rel="alternate" hreflang="ru" href="https://amato2114.github.io/RussianStocks/privacy.html">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
@@ -19,11 +19,13 @@
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
             <a class="navbar-brand" href="index.html">RussianStocks AI</a>
-            <div class="collapse navbar-collapse justify-content-end">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener">Дисклеймер</a></li>
                     <li class="nav-item"><a class="nav-link" href="oferta.html" rel="noopener">Оферта</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                 </ul>
             </div>
         </div>
@@ -39,13 +41,13 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Собираемые данные</h5>
-                <p class="card-text">- Персональные данные: Только email для подписки, уведомлений и обработки платежей (с согласия пользователя).<br>- Не персональные: Технические данные (браузер, устройство) для улучшения UX. Куки используются для сессий и аналитики (с уведомлением и согласием при первом посещении).<br>- Нет сбора IP, геолокации или других данных без необходимости.</p>
+                <p class="card-text">- Персональные данные: Только email для подписки, уведомлений и обработки платежей (с согласия пользователя).<br>- Не персональные: Технические данные (браузер, устройство) для улучшения UX. Куки используются для сессий и аналитики (с уведомлением и согласием при первом посещении).<br>- Нет сбора IP, геолокации или других данных без необходимости. Для бесплатного прогноза SBER/GAZP — анонимно.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Цели обработки</h5>
-                <p class="card-text">- Предоставление доступа к премиум-функциям.<br>- Отправка уведомлений о сигналах (если запрошено).<br>- Обработка платежей через YooKassa.<br>- Улучшение сервиса (анализ использования без идентификации).</p>
+                <p class="card-text">- Предоставление доступа к премиум-функциям AI-прогноза.<br>- Отправка уведомлений о сигналах (если запрошено).<br>- Обработка платежей через YooKassa.<br>- Улучшение сервиса (анализ использования без идентификации).</p>
             </div>
         </div>
         <div class="card mb-4">
@@ -69,18 +71,19 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Куки</h5>
-                <p class="card-text">Уведомление при первом посещении. Куки для UX (не для таргетинга). Отказ — через браузер.</p>
+                <p class="card-text">Уведомление при первом посещении. Куки для UX (не для таргетинга). Отказ — через браузер. Подробнее о куки в сервисе AI-трейдинг.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Изменения</h5>
-                <p class="card-text">Обновления публикуются на сайте. Текущая версия: 18.10.2025.</p>
+                <p class="card-text">Обновления публикуются на сайте. Текущая версия: 22.10.2025.</p>
             </div>
         </div>
+        <a href="index.html" class="btn btn-primary">Вернуться к прогнозам</a>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет.</p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. <a href="index.html" style="color:#FFD700;">Главная</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
