--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Дисклеймер | RussianStocks AI: AI-прогноз акций MOEX</title>
-    <meta name="description" content="Дисклеймер для сервиса прогнозов цен акций MOEX. Не инвестиционные советы. Соответствует ФЗ-39. Получите информацию о юридических аспектах AI-трейдинг бесплатно.">
-    <meta name="keywords" content="дисклеймер прогноз акций MOEX, отказ от ответственности ФЗ-39, юридическая информация AI-прогноз SBER, нейросеть трейдинг бесплатно, прогноз акций Сбер">
+    <title>Дисклеймер | RussianStocks AI: Прогноз акций MOEX по ФЗ-39</title>
+    <meta name="description" content="Дисклеймер для сервиса AI-прогнозов цен акций MOEX. Не инвестиционные советы. Соответствует ФЗ-39. Отказ от ответственности за прогноз SBER, GAZP.">
+    <meta name="keywords" content="дисклеймер прогноз акций MOEX, отказ от ответственности ФЗ-39, юридическая информация AI-прогноз SBER, прогноз цен акций Transformer">
     <meta name="author" content="Веретенников Денис Андреевич">
-    <link rel="canonical" href="https://amato2114.github.io/RussianStocks/disclaimer.html">
-    <link rel="alternate" hreflang="ru" href="https://amato2114.github.io/RussianStocks/disclaimer.html">
+    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/disclaimer">
+    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/disclaimer">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Дисклеймер | RussianStocks AI">
-    <meta property="og:description" content="Отказ от ответственности за прогнозы цен акций MOEX с Transformer.">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/001F3F/FFFFFF?text=Disclaimer+RussianStocks+AI" loading="lazy">
-    <meta property="og:url" content="https://amato2114.github.io/RussianStocks/disclaimer.html">
+    <meta property="og:description" content="Отказ от ответственности за AI-прогнозы цен акций MOEX.">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630/001F3F/FFFFFF?text=Disclaimer" loading="lazy" alt="Дисклеймер AI-прогноз акций MOEX">
+    <meta property="og:url" content="https://russianstocks-ai.streamlit.app/disclaimer">
     <meta property="og:type" content="article">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Article","headline":"Дисклеймер RussianStocks AI","description":"Отказ от ответственности за прогнозы цен акций MOEX с AI.","author":{"@type":"Person","name":"Веретенников Денис Андреевич"},"publisher":{"@type":"Organization","name":"RussianStocks AI","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"datePublished":"2025-10-22","url":"https://amato2114.github.io/RussianStocks/disclaimer.html","breadcrumb":{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Главная","item":"https://amato2114.github.io/RussianStocks/"},{"@type":"ListItem","position":2,"name":"Дисклеймер"}]}}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Article","headline":"Дисклеймер RussianStocks AI","description":"Отказ от ответственности за прогнозы цен акций MOEX.","author":{"@type":"Person","name":"Веретенников Денис Андреевич"},"publisher":{"@type":"Organization","name":"RussianStocks AI","contactPoint":{"@type":"ContactPoint","email":"veretenni@bk.ru"}},"datePublished":"2025-10-23","url":"https://russianstocks-ai.streamlit.app/disclaimer","breadcrumb":{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Главная","item":"https://russianstocks-ai.streamlit.app/"},{"@type":"ListItem","position":2,"name":"Дисклеймер"}]}}</script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -27,13 +27,11 @@
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
             <a class="navbar-brand" href="index.html">RussianStocks AI</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
                     <li class="nav-item"><a class="nav-link" href="oferta.html" rel="noopener">Оферта</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                 </ul>
             </div>
         </div>
@@ -43,37 +41,37 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Исполнитель</h5>
-                <p class="card-text">Веретенников Денис Андреевич, самозанятый, ИНН: 254300715808. Эксперт в AI-прогнозировании с 10+ годами опыта в трейдинге.</p>
+                <p class="card-text">Веретенников Денис Андреевич, самозанятый, ИНН: 254300715808. Эксперт по AI в трейдинге с 5+ годами опыта.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Дисклеймер (ФЗ-39 "О рынке ценных бумаг")</h5>
-                <p class="card-text">Прогнозы носят исключительно образовательный и информационный характер, не квалифицируются как инвестиционные советы и не подразумевают гарантии прибыли. Полная ответственность за решения лежит на пользователе. Аналогично MQL5 индикаторам, наши AI-прогнозы — инструмент для анализа, а не рекомендация.</p>
+                <p class="card-text">Прогнозы носят исключительно образовательный и информационный характер, не квалифицируются как инвестиционные советы и не подразумевают гарантии прибыли. Полная ответственность за решения лежит на пользователе. Это не замена профессиональной консультации по акциям MOEX.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Оплата (ФЗ-54 "О ККТ")</h5>
-                <p class="card-text">Транзакции премиум-подписки обрабатываются YooKassa с немедленной генерацией электронных чеков в полном соответствии с фискальными нормами.</p>
+                <p class="card-text">Транзакции премиум-подписки обрабатываются YooKassa с немедленной генерацией электронных чеков в полном соответствии с фискальными нормами для AI-прогнозов.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Возврат (ФЗ-2300-1 "О защите прав потребителей")</h5>
-                <p class="card-text">Безусловный возврат полной суммы в пределах 14 дней по инициативе клиента на veretenni@bk.ru, без необходимости обоснования.</p>
+                <p class="card-text">Безусловный возврат полной суммы в пределах 14 дней по инициативе клиента на veretenni@bk.ru, без необходимости обоснования для премиум-подписки.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Персональные данные (ФЗ-152)</h5>
-                <p class="card-text">Полное отсутствие сбора или обработки данных; конфиденциальность наивысшего уровня. Подробнее в <a href="privacy.html">политике конфиденциальности</a>.</p>
+                <p class="card-text">Полное отсутствие сбора или обработки данных; конфиденциальность наивысшего уровня в сервисе AI-прогнозов.</p>
             </div>
         </div>
-        <a href="index.html" class="btn btn-primary">Вернуться к AI-прогнозам</a>
+        <a href="https://russianstocks-ai.streamlit.app/" class="btn btn-primary">Вернуться к AI-прогнозам</a>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. <a href="index.html" style="color:#FFD700;">Главная</a></p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. Обновлено: 23.10.2025.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
