--- a/terms.html
+++ b/terms.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Условия использования | RussianStocks AI: Нейросеть для акций MOEX</title>
-    <meta name="description" content="Условия использования сервиса RussianStocks AI по ФЗ-149. Образовательный характер для AI-прогноз акций.">
-    <meta name="keywords" content="условия использования AI-прогноз акций, ФЗ-149 доступ к информации MOEX, terms премиум GAZP, EMA MACD RSI прогноз, бесплатный анализ акций Россия">
-    <link rel="canonical" href="https://amato2114.github.io/RussianStocks/terms.html">
-    <link rel="alternate" hreflang="ru" href="https://amato2114.github.io/RussianStocks/terms.html">
+    <title>Условия использования | RussianStocks AI: ФЗ-149 для доступа к прогнозам</title>
+    <meta name="description" content="Условия использования сервиса RussianStocks AI по ФЗ-149. Образовательный характер AI-прогнозов акций MOEX.">
+    <meta name="keywords" content="условия использования AI-прогноз акций, ФЗ-149 доступ к информации MOEX, terms премиум GAZP, бесплатный прогноз акций 2025">
+    <link rel="canonical" href="https://russianstocks-ai.streamlit.app/terms">
+    <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/terms">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
     <meta charset="UTF-8">
@@ -19,13 +19,11 @@
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
         <div class="container">
             <a class="navbar-brand" href="index.html">RussianStocks AI</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener">Дисклеймер</a></li>
                     <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
                     <li class="nav-item"><a class="nav-link" href="oferta.html" rel="noopener">Оферта</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                 </ul>
             </div>
         </div>
@@ -41,37 +39,37 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Общие положения</h5>
-                <p class="card-text">Доступ к информации свободный при соблюдении законов РФ (ст. 5 ФЗ-149). Сайт предоставляет информацию о прогнозах цен акций (не финансовые услуги, образовательный характер с AI Transformer).</p>
+                <p class="card-text">Доступ к информации свободный при соблюдении законов РФ (ст. 5 ФЗ-149). Сайт предоставляет информацию о прогнозах цен акций (не финансовые услуги, образовательный характер для трейдеров).</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Права пользователя</h5>
-                <p class="card-text">Поиск, получение, использование информации законными способами. Запрещено нарушать права третьих лиц. Доступ к бесплатному прогнозу SBER/GAZP без ограничений.</p>
+                <p class="card-text">Поиск, получение, использование информации законными способами. Запрещено нарушать права третьих лиц в контексте AI-прогнозов.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Обязанности пользователя</h5>
-                <p class="card-text">- Не использовать для незаконных целей (спам, хакерство, распространение вредоносного ПО).<br>- Не перепродавать данные/прогнозы.<br>- Не нарушать авторские права (ст. 7 ФЗ-149).<br>- Нарушение — блокировка доступа без уведомления. Для премиум — соблюдение оферты.</p>
+                <p class="card-text">- Не использовать для незаконных целей (спам, хакерство, распространение вредоносного ПО).<br>- Не перепродавать данные/прогнозы акций.<br>- Не нарушать авторские права (ст. 7 ФЗ-149).<br>- Нарушение — блокировка доступа без уведомления.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Ограничения</h5>
-                <p class="card-text">Информация "как есть". Оператор не несет ответственности за ущерб от использования (ст. 13 ФЗ-149). Прогнозы — не гарантия, как в Forex AI прогноз.</p>
+                <p class="card-text">Информация "как есть". Оператор не несет ответственности за ущерб от использования (ст. 13 ФЗ-149) прогнозов Transformer.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Изменения</h5>
-                <p class="card-text">Условия могут изменяться, новая версия на сайте. Уведомление за 7 дней.</p>
+                <p class="card-text">Условия могут изменяться, новая версия на сайте. Текущая: 23.10.2025.</p>
             </div>
         </div>
-        <a href="index.html" class="btn btn-primary">Вернуться к преимуществам</a>
+        <a href="https://russianstocks-ai.streamlit.app/" class="btn btn-primary">Вернуться на главную</a>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. <a href="index.html" style="color:#FFD700;">Главная</a></p>
+        <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. Обновлено: 23.10.2025.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
